fix text-align: center bug, update README and update example

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,7 @@ html {
       }
     }
     .xz-lightbox-img {
+      display: block;
       cursor: zoom-out;
     }
   }
